[gd_scene load_steps=19 format=2]

[ext_resource path="res://_resources/scene_duel/top_info_box.png" type="Texture2D" id=1]
[ext_resource path="res://_scenes/card_info_box.tscn" type="PackedScene" id=2]
[ext_resource path="res://_resources/fonts/BankGothic Md BT.ttf" type="FontFile" id=3]
[ext_resource path="res://_resources/scene_duel/darken_bg.png" type="Texture2D" id=4]
[ext_resource path="res://_scenes/card_visual_only.tscn" type="PackedScene" id=5]
[ext_resource path="res://_resources/fonts/Yu-Gi-Oh! Matrix Regular Small Caps 2.ttf" type="FontFile" id=6]
[ext_resource path="res://_resources/card_shop/starchip.png" type="Texture2D" id=7]
[ext_resource path="res://_resources/reward_scene/duel_cards_used.png" type="Texture2D" id=8]
[ext_resource path="res://_scripts/duel_rewards.gd" type="Script" id=9]
[ext_resource path="res://_resources/reward_scene/gradientbg.png" type="Texture2D" id=10]
[ext_resource path="res://_scripts/save_load_logic.gd" type="Script" id=11]

[sub_resource type="FontFile" id=7]
size = 400
outline_size = 10
use_mipmaps = true
use_filter = true
extra_spacing_char = -1
font_data = ExtResource( 6 )

[sub_resource type="FontFile" id=1]
size = 68
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = -4
font_data = ExtResource( 3 )

[sub_resource type="FontFile" id=8]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="FontFile" id=5]
size = 24
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="FontFile" id=6]
size = 120
outline_size = 2
font_data = ExtResource( 6 )

[sub_resource type="FontFile" id=3]
size = 33
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = -4
font_data = ExtResource( 3 )

[sub_resource type="FontFile" id=4]
size = 55
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = -4
font_data = ExtResource( 3 )

[node name="reward_scene" type="Node2D"]
script = ExtResource( 9 )

[node name="dark_over" type="Sprite2D" parent="."]
position = Vector2( 640, 360.5 )
scale = Vector2( 10, 5.63281 )
z_index = 2
texture = ExtResource( 4 )

[node name="BIG_LETTERS" type="Node2D" parent="."]
position = Vector2( 0, -1 )
z_index = 1

[node name="bg_dark" type="Sprite2D" parent="BIG_LETTERS"]
position = Vector2( 640, 360.5 )
scale = Vector2( 10, 5.61719 )
texture = ExtResource( 4 )

[node name="YOU" type="Label" parent="BIG_LETTERS"]
offset_top = 36.0
offset_right = 1278.0
offset_bottom = 437.0
scale = Vector2( 1, 1.05 )
theme_override_colors/font_color = Color( 1, 0, 0, 1 )
theme_override_colors/font_outline_color = Color( 1, 0.843137, 0.12549, 1 )
theme_override_fonts/font = SubResource( 7 )
text = "YOU"
align = 1
uppercase = true

[node name="win_lose" type="Label" parent="BIG_LETTERS"]
offset_left = 1.0
offset_top = 334.0
offset_right = 1279.0
offset_bottom = 735.0
scale = Vector2( 1, 1.05 )
theme_override_colors/font_color = Color( 1, 0, 0, 1 )
theme_override_colors/font_outline_color = Color( 1, 0.843137, 0.12549, 1 )
theme_override_fonts/font = SubResource( 7 )
text = "WIN"
align = 1
uppercase = true

[node name="tween" type="Tween" parent="BIG_LETTERS"]

[node name="timer" type="Timer" parent="BIG_LETTERS"]

[node name="bg_dark" type="Sprite2D" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 10, 5.625 )
texture = ExtResource( 4 )

[node name="user_interface" type="Node2D" parent="."]

[node name="card_info_box" parent="user_interface" instance=ExtResource( 2 )]

[node name="top_info_box" type="Sprite2D" parent="user_interface"]
texture = ExtResource( 1 )
centered = false

[node name="window_title" type="Label" parent="user_interface/top_info_box"]
offset_top = -15.0
offset_right = 1280.0
offset_bottom = 58.0
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource( 1 )
text = "Duel Results and Rewards"
align = 1
valign = 1

[node name="UI_tween" type="Tween" parent="user_interface"]

[node name="cards_reward" type="Node2D" parent="."]
position = Vector2( 66, 54 )

[node name="HBoxContainer" type="HBoxContainer" parent="cards_reward"]
offset_left = 115.0
offset_top = 25.0
offset_right = 1169.0
offset_bottom = 505.0
theme_override_constants/separation = 32
alignment = 1

[node name="reward_1" parent="cards_reward/HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 330.0
offset_bottom = 480.0
custom_minimum_size = Vector2( 330, 480 )

[node name="reward_2" parent="cards_reward/HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
offset_left = 362.0
offset_top = 0.0
offset_right = 692.0
offset_bottom = 480.0
custom_minimum_size = Vector2( 330, 480 )

[node name="reward_3" parent="cards_reward/HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
offset_left = 724.0
offset_top = 0.0
offset_right = 1054.0
offset_bottom = 480.0
custom_minimum_size = Vector2( 330, 480 )

[node name="new_indicators" type="Node2D" parent="cards_reward"]
visible = false

[node name="indicator_1" type="Label" parent="cards_reward/new_indicators"]
offset_left = 119.0
offset_top = 450.0
offset_right = 284.0
offset_bottom = 495.0
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 8 )
text = "NEW"
align = 1
valign = 1

[node name="Gradientbg" type="Sprite2D" parent="cards_reward/new_indicators/indicator_1"]
modulate = Color( 1, 1, 1, 0.588235 )
show_behind_parent = true
position = Vector2( 80, 24 )
scale = Vector2( 0.165426, 0.1 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 23, -220, 1209, 1118 )

[node name="duel_info" type="Node2D" parent="."]
position = Vector2( 81, 253 )

[node name="title" type="Label" parent="duel_info"]
offset_left = -65.0
offset_top = -107.0
offset_right = 65.0
offset_bottom = -81.0
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 5 )
text = "Duel Info"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="duel_cards_used" type="Sprite2D" parent="duel_info"]
texture = ExtResource( 8 )

[node name="deck_used" type="Label" parent="duel_info"]
offset_left = -9.0
offset_top = -72.0
offset_right = 29.0
offset_bottom = -46.0
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 5 )
text = "40"
align = 1

[node name="fusion_used" type="Label" parent="duel_info"]
offset_left = -9.0
offset_top = -31.0
offset_right = 29.0
offset_bottom = -5.0
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 5 )
text = "40"
align = 1

[node name="effects_used" type="Label" parent="duel_info"]
offset_left = -9.0
offset_top = 10.0
offset_right = 29.0
offset_bottom = 36.0
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 5 )
text = "40"
align = 1

[node name="spelltrap_used" type="Label" parent="duel_info"]
offset_left = -9.0
offset_top = 51.0
offset_right = 29.0
offset_bottom = 77.0
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 5 )
text = "40"
align = 1

[node name="rank_info" type="Node2D" parent="."]

[node name="rank" type="Label" parent="rank_info"]
anchor_left = -0.791667
anchor_right = -0.791667
offset_left = -5.0
offset_top = 375.0
offset_right = 125.0
offset_bottom = 401.0
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 5 )
text = "rank"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="rank_letter" type="Label" parent="rank_info"]
anchor_left = 0.388889
anchor_right = 0.388889
anchor_bottom = 0.61039
offset_left = 93.0
offset_top = 326.0
offset_right = 223.0
offset_bottom = 446.0
theme_override_colors/font_color = Color( 0.721569, 0.721569, 0.721569, 1 )
theme_override_colors/font_outline_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_shadow_color = Color( 0.309804, 0.309804, 0.309804, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 6 )
text = "F"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="starchip_reward" type="Node2D" parent="."]
position = Vector2( 49, 447 )

[node name="starchip" type="Sprite2D" parent="starchip_reward"]
texture = ExtResource( 7 )

[node name="x" type="Label" parent="starchip_reward"]
offset_left = 16.0
offset_top = -11.0
offset_right = 59.0
offset_bottom = 24.0
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource( 3 )
text = "x"
align = 1
valign = 1

[node name="number" type="Label" parent="starchip_reward"]
offset_left = 45.0
offset_top = -29.0
offset_right = 88.0
offset_bottom = 29.0
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource( 4 )
text = "5"
align = 1
valign = 1

[node name="screen_button" type="Button" parent="."]
offset_right = 1281.0
offset_bottom = 720.0
focus_mode = 0
focus_mode = 0
flat = true

[node name="tweens" type="Node" parent="."]

[node name="tween_1" type="Tween" parent="tweens"]

[node name="timer" type="Timer" parent="tweens/tween_1"]

[node name="tween_2" type="Tween" parent="tweens"]

[node name="timer" type="Timer" parent="tweens/tween_2"]

[node name="tween_3" type="Tween" parent="tweens"]

[node name="timer" type="Timer" parent="tweens/tween_3"]

[node name="tween_4" type="Tween" parent="tweens"]

[node name="timer" type="Timer" parent="tweens/tween_4"]

[node name="final_timer" type="Timer" parent="."]

[node name="save_load_logic" type="Node" parent="."]
script = ExtResource( 11 )

[connection signal="button_up" from="screen_button" to="." method="_on_screen_button_button_up"]
